# C-OpenGL-Engine-Test

./: CMakeLists.txt
src/: main.cpp
src/b_time/: time.h
src/gldata/: image.h  vao.cpp  vao.h
src/shaders/: fragment.glsl  shader.cpp  shader.h  vertex.glsl
src/utils/: camera.h  time.cpp
